fix alignment

--- a/client/css/quickaddnew.css
+++ b/client/css/quickaddnew.css
@@ -49,3 +49,7 @@
 .ui-dialog-titlebar-close .ui-icon {
     pointer-events: none;
 }
+
+.ui-dialog .tab-content {
+    clear: both;
+}
